--- a/aula012ex/ex019/modelo.html
+++ b/aula012ex/ex019/modelo.html
@@ -6,18 +6,18 @@
     <title>Modelo de exercício</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
-        <h1>Título</h1>
+        <h1>Hora do Dia</h1>
     </header>
 
     <section>
-        <div>
-            testando...
+        <div id="msg">
+            Aqui vai aparecer a mensagem...
         </div>
 
-        <div>
-
+        <div id="foto">
+            <img id="imagem" src="dia.png" alt="Foto manhã">
         </div>
     </section>
 
