--- a/aula016ex copy/index.html
+++ b/aula016ex copy/index.html
@@ -20,14 +20,12 @@
         </div>
 
         <div>
-            <p>
-                <select name="val" id="val" size="10">
-                    <option>Adicione um número acima.</option>
-                </select>
-            </p>
-            <p><input type="button" value="Finalizar" onclick="resultado()"></p>
+            <br><br><select name="val" id="val" size="10"></select>
+            <br><input type="button" value="Finalizar" onclick="finalizar()">
         </div>
-        <div id="res">resultado</div>
+        <div id="res">
+            
+        </div>
     </section>
 
     <script src="script.js"></script>
